# kyrsovaya_three

./: .gitignore  pyproject.toml
src/: functions.py  main.py  package.json
tests/: package.json  test_functions.py  test_main.py
